--- a/index.html
+++ b/index.html
@@ -495,8 +495,8 @@
                                 </svg>
                             </span>
                             <span class="flex d-flex flex-column">
-                                <span class="sidebar-brand">Edusta</span>
-                                <small>Next Generation</small>
+                                <span class="sidebar-brand"></span>
+                                <small>Fees Payment System</small>
                             </span>
                         </a>
                     </div>
@@ -515,57 +515,7 @@
 
                     <div class="sidebar-block p-0">
                         <ul class="sidebar-menu mt-0">
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="student-dashboard.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">star_half</i>
-                                    <span class="sidebar-menu-text">Dashboard</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="student-courses.html">
-                                    <i
-                                        class="sidebar-menu-icon sidebar-menu-icon--left material-icons">queue_play_next</i>
-                                    <span class="sidebar-menu-text">Courses</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="student-course-purchase.html">
-                                    <i
-                                        class="sidebar-menu-icon sidebar-menu-icon--left material-icons">shopping_cart</i>
-                                    <span class="sidebar-menu-text">Purchase Course</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="student-lessons.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">dns</i>
-                                    <span class="sidebar-menu-text">Browse Lessons</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="student-quiz.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">live_help</i>
-                                    <span class="sidebar-menu-text">Take Quiz</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="student-discussions.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">forum</i>
-                                    <span class="sidebar-menu-text">Discussions</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="edit-account.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">settings</i>
-                                    <span class="sidebar-menu-text">Edit Account</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="student-billing.html">
-                                    <i
-                                        class="sidebar-menu-icon sidebar-menu-icon--left material-icons">monetization_on</i>
-                                    <span class="sidebar-menu-text">Billing</span>
-                                </a>
-                            </li>
+
                             <li class="sidebar-menu-item">
                                 <a class="sidebar-menu-button" href="login.html">
                                     <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">exit_to_app</i>
@@ -577,99 +527,7 @@
                     </div>
 
 
-                    <div class="sidebar-heading">Author</div>
 
-                    <div class="sidebar-block p-0">
-                        <ul class="sidebar-menu mt-0">
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="author-dashboard.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">dvr</i>
-                                    <span class="sidebar-menu-text">Dashboard</span>
-                                    <span
-                                        class="badge badge-warning rounded-circle badge-notifications ml-auto">8</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="author-courses.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">layers</i>
-                                    <span class="sidebar-menu-text">Courses</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="author-quiz-manager.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">assignment</i>
-                                    <span class="sidebar-menu-text">Quiz Manager</span>
-                                </a>
-                            </li>
-
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="author-earnings.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">local_atm</i>
-                                    <span class="sidebar-menu-text">Earnings</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="author-reports.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">pie_chart</i>
-                                    <span class="sidebar-menu-text">Reports</span>
-                                </a>
-                            </li>
-
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="author-payout.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">credit_card</i>
-                                    <span class="sidebar-menu-text">Payout</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="login.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">exit_to_app</i>
-                                    <span class="sidebar-menu-text">Logout</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-
-
-                    <div class="sidebar-heading">Admin</div>
-
-                    <div class="sidebar-block p-0">
-                        <ul class="sidebar-menu mt-0">
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="admin-dashboard.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">dvr</i>
-                                    <span class="sidebar-menu-text">Dashboard</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="admin-emails.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">email</i>
-                                    <span class="sidebar-menu-text">Emails</span>
-                                </a>
-                            </li>
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="admin-chat.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">comment</i>
-                                    <span class="sidebar-menu-text">Chat</span>
-                                </a>
-                            </li>
-
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="admin-tickets.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">local_offer</i>
-                                    <span class="sidebar-menu-text">Tickets</span>
-                                    <span class="badge badge-warning badge-notifications ml-auto">NEW</span>
-                                </a>
-                            </li>
-
-                            <li class="sidebar-menu-item">
-                                <a class="sidebar-menu-button" href="admin-trello.html">
-                                    <i class="sidebar-menu-icon sidebar-menu-icon--left material-icons">touch_app</i>
-                                    <span class="sidebar-menu-text">Trello</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
 
                 </div>
             </div>
@@ -677,180 +535,7 @@
     </div>
     <!-- // END drawer-layout -->
 
-    <div class="mdk-drawer js-mdk-drawer" id="events-drawer" data-align="end">
-        <div class="mdk-drawer__content">
-            <div class="sidebar sidebar-light sidebar-left simplebar" data-simplebar>
 
-
-
-
-                <small class="text-dark-gray px-3 py-1">
-                    <strong>Thursday, 28 Feb</strong>
-                </small>
-
-                <div class="list-group list-group-flush">
-
-                    <div class="list-group-item bg-light">
-                        <div class="row">
-                            <div class="col-auto d-flex flex-column">
-                                <small>12:30 PM</small>
-                                <small class="text-dark-gray">2 hrs</small>
-                            </div>
-                            <div class="col">
-                                <div class="d-flex flex-column flex">
-                                    <a href="#" class="text-body"><strong class="text-15pt">Marketing Team
-                                            Meeting</strong></a>
-
-                                    <small class="text-muted d-flex align-items-center"><i
-                                            class="material-icons icon-16pt mr-1">location_on</i> 16845 Hicks
-                                        Road</small>
-
-
-                                </div>
-                                <div class="avatar-group mt-2">
-
-                                    <div class="avatar avatar-xs">
-                                        <img src="assets/images/256_joao-silas-636453-unsplash.jpg" alt="Avatar"
-                                            class="avatar-img rounded-circle">
-                                    </div>
-
-                                    <div class="avatar avatar-xs">
-                                        <img src="assets/images/256_jeremy-banks-798787-unsplash.jpg" alt="Avatar"
-                                            class="avatar-img rounded-circle">
-                                    </div>
-
-                                    <div class="avatar avatar-xs">
-                                        <img src="assets/images/256_daniel-gaffey-1060698-unsplash.jpg" alt="Avatar"
-                                            class="avatar-img rounded-circle">
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <small class="text-dark-gray px-3 py-1">
-                    <strong>Wednesday, 27 Feb</strong>
-                </small>
-
-                <div class="list-group list-group-flush">
-
-                    <div class="list-group-item bg-light">
-                        <div class="row">
-                            <div class="col-auto d-flex flex-column">
-                                <small>07:48 PM</small>
-                                <small class="text-dark-gray">30 min</small>
-                            </div>
-                            <div class="col">
-                                <div class="d-flex flex-column flex">
-                                    <a href="#" class="text-body"><strong class="text-15pt">Call Alex</strong></a>
-
-
-                                    <small class="text-muted d-flex align-items-center"><i
-                                            class="material-icons icon-16pt mr-1">phone</i> 202-555-0131</small>
-
-                                </div>
-
-
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <small class="text-dark-gray px-3 py-1">
-                    <strong>Tuesday, 26 Feb</strong>
-                </small>
-
-                <div class="list-group list-group-flush">
-
-                    <div class="list-group-item bg-light">
-                        <div class="row">
-                            <div class="col-auto d-flex flex-column">
-                                <small>03:13 PM</small>
-                                <small class="text-dark-gray">2 hrs</small>
-                            </div>
-                            <div class="col">
-                                <div class="d-flex flex-column flex">
-                                    <a href="#" class="text-body"><strong class="text-15pt">Design Team
-                                            Meeting</strong></a>
-
-                                    <small class="text-muted d-flex align-items-center"><i
-                                            class="material-icons icon-16pt mr-1">location_on</i> 16845 Hicks
-                                        Road</small>
-
-
-                                </div>
-                                <div class="avatar-group mt-2">
-
-                                    <div class="avatar avatar-xs">
-                                        <img src="assets/images/256_rsz_1andy-lee-642320-unsplash.jpg" alt="Avatar"
-                                            class="avatar-img rounded-circle">
-                                    </div>
-
-                                    <div class="avatar avatar-xs">
-                                        <img src="assets/images/256_michael-dam-258165-unsplash.jpg" alt="Avatar"
-                                            class="avatar-img rounded-circle">
-                                    </div>
-
-                                    <div class="avatar avatar-xs">
-                                        <img src="assets/images/256_luke-porter-261779-unsplash.jpg" alt="Avatar"
-                                            class="avatar-img rounded-circle">
-                                    </div>
-
-                                    <div class="avatar avatar-xs">
-                                        <img src="assets/images/stories/256_rsz_clem-onojeghuo-193397-unsplash.jpg"
-                                            alt="Avatar" class="avatar-img rounded-circle">
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <small class="text-dark-gray px-3 py-1">
-                    <strong>Monday, 25 Feb</strong>
-                </small>
-
-                <div class="list-group list-group-flush">
-
-                    <div class="list-group-item bg-light">
-                        <div class="row">
-                            <div class="col-auto d-flex flex-column">
-                                <small>12:30 PM</small>
-                                <small class="text-dark-gray">2 hrs</small>
-                            </div>
-                            <div class="col d-flex">
-                                <div class="d-flex flex-column flex">
-                                    <a href="#" class="text-body"><strong class="text-15pt">Call Wendy</strong></a>
-
-
-                                    <small class="text-muted d-flex align-items-center"><i
-                                            class="material-icons icon-16pt mr-1">phone</i> 202-555-0131</small>
-
-                                </div>
-
-
-                                <div class="avatar avatar-xs">
-                                    <img src="assets/images/256_michael-dam-258165-unsplash.jpg" alt="Avatar"
-                                        class="avatar-img rounded-circle">
-                                </div>
-
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-    </div>
 
     <!-- App Settings FAB -->
     <div id="app-settings">
