--- a/reciept.html
+++ b/reciept.html
@@ -201,7 +201,7 @@
 
           <div class="container-fluid nav nav-tabs border-bottom mb-3" role="tablist">
             <a href="#activity_all" class="active" data-toggle="tab" role="tab" aria-controls="activity_all"
-              aria-selected="true">Student Payments</a>
+              aria-selected="true">Federal College of Education Obudu</a>
 
           </div>
           <div class="container-fluid page__container">
