--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
                     <div class="container-fluid page__container page__heading ">
-                        <h1 class="mb-0">Pay Fees</h1>
+                        <h1 class="mb-0">Federal College of Education Obudu</h1>
                     </div>
 
                     <div class="container-fluid nav nav-tabs border-bottom mb-3" role="tablist">
