--- a/index.html
+++ b/index.html
@@ -280,15 +280,14 @@
                                                         </div>
                                                         <!--row end-->
                                                         <div class="row row-three">
-                                                            <div class="col-xs-5" style="margin-right: -143px">
+                                                            <div class="col-xs-5">
                                                                 <label>Level</label>
                                                                 <select id="level" class="custom-select">
                                                                     <option value="">Select Level</option>
-                                                                    <option value="100">100</option>
-                                                                    <option value="200">200</option>
-                                                                    <option value="300">300</option>
-                                                                    <option value="400">400</option>
-                                                                    <option value="500">500</option>
+                                                                    <option value="100">NCE 1</option>
+                                                                    <option value="200">NCE 2</option>
+                                                                    <option value="300">NCE 3</option>
+
                                                                 </select>
 
                                                             </div>
@@ -381,6 +380,7 @@
 
                                                                 <th class="text-center">Status</th>
                                                                 <th class="text-center" style="width: 140px;">Date</th>
+
                                                             </tr>
                                                         </thead>
                                                         <tbody class="list" id="invoice">
